--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="../src/assets/Celestial-Freight-Train-Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <title>Celestial Freight Train</title>
   </head>
   <body>
     <div id="app"></div>
