--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="./Celestial-Freight-Train-Logo.png" />
+    <link rel="icon" href="./S0B_Alliance_Logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Celestial Freight Train</title>
   </head>
